@@ -25,10 +25,13 @@ how does py.test relate to twisted's trial?
 
 Since some time py.test has builtin support for supporting tests
 written using trial. It does not itself start a reactor, however,
-and does not handle Deferreds returned from a test.  Someone using
-these features might eventually write a dedicated ``pytest-twisted`` 
-plugin which will surely see strong support from the pytest development
-team.
+and does not handle Deferreds returned from a test in pytest style.  
+If you are using trial's unittest.TestCase chances are that you can
+just run your tests even if you return Deferreds.  In addition,
+there also is a dedicated `pytest-twisted
+<http://pypi.python.org/pypi/pytest-twisted`` plugin which allows to
+return deferreds from pytest-style tests, allowing to use
+:ref:`fixtures` and other features.
  
 how does py.test work with Django?
 ++++++++++++++++++++++++++++++++++++++++++++++
